# AngebotMK_ML

./: .gitignore  README.md  dataset_setup.ipynb  layout_parser.ipynb  layout_parser_testing.ipynb  layoutml_test.ipynb  pyproject.toml  testing_model.ipynb
notebooks/: dataset_setup.ipynb  dataset_sub_image.ipynb  sub_object_detection_demo.ipynb
scripts/: combine_object_detection.py  example.py  object_detection_demo.py  pdf2png.py  pdf_to_png.py  sub_object_detection_demo.py  sub_object_detection_demo_new.py  transform_img_data_to_dataset.py
