[tool.poetry]
name = "angebotmk-ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "angebotmk_ml"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.2"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"
transformers = "^4.30.1"
torch = "^2.0.1"
torchvision = "^0.15.2"
pillow = "^9.5.0"
pytesseract = "^0.3.10"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
